# iron-house-os

./: .env.production.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.production.yml  docker-compose.yml  evidence.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
Documentation/: BID_INTAKE_AND_DRAWING_REVIEW_CHECKLIST.md  BID_WORKFLOW.md  ESTIMATE_ENGINE_ARCHITECTURE.md  ESTIMATING_STANDARDS.md  IRON_HOUSE_OS_ROADMAP.md  MUNICIPAL_STANDARDS_CHECKLIST.md  PROJECT_FOLDER_STANDARD.md  RFQ_AUTOMATION_SPEC.md  RFQ_WORKFLOW.md  SUPPLIER_DATABASE_SCHEMA.md  SUPPLIER_MASTER_SPEC.md  TENDER_DISCOVERY_ENGINE.md  WORKFLOW.md
automation/: agent_roles.json  autonomous_backlog.json  autonomous_config.json  autonomous_dispatcher.py  autonomous_foreman_v2.py  build-queue.json  iron_house_build_agent.py  run_mvp_checks.py
backend/: .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
database/: schema.sql  seed.sql
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: api-inventory-mvp.md  architecture.md  audit-log-plan.md  auth-plan.md  autonomous-development-system-v1.md  backup-restore-plan.md  build-100-mvp-handoff.md  build-101-to-110-document-management.md  build-141-to-150-completion.md  build-161-to-170-completion.md  build-181-tender-intake-engine.md  build-182-project-conversion.md  build-183-document-manager.md  build-184-drawing-index.md  build-185-supplier-package-builder.md  build-186-rfq-tracking.md  build-187-quote-collection.md  build-70-cutover-note.md  (+60 more)
(+389 files in other folders)
